src/objects/Application_Inventory__c.object
<CustomObject>
    <description>TOOLKIT: Provides application component detailed related to customer requests.</description>
    <fields>
        <fullName>Build_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for build1 phase.</description>
        <label>Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for build2 phase.</description>
        <label>Build_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Complete__c</fullName>
        <description>This field specifies the build completion in percentage.</description>
        <label>Build % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Build_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the owner of the build</description>
        <label>Build Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (Build Owner)</relationshipLabel>
        <relationshipName>Application_Inventories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Text area to add additional information related to Application Inventory</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_1__c</fullName>
        <description>Storing estimated complexity for particular type of work(Stage1)</description>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_2__c</fullName>
        <description>Storing estimated complexity for particular type of work(stage2)</description>
        <label>Complexity_2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <description>Created to capture deployment details for each requirement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Project_Impact_Status__c</fullName>
        <description>Field to track status of impact on cross project teams</description>
        <label>Cross Project Impact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internally Reviewed</fullName>
                </value>
                <value>
                    <fullName>Internally Approved</fullName>
                </value>
                <value>
                    <fullName>Reviewed with Nokia</fullName>
                </value>
                <value>
                    <fullName>Approved By Nokia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Project_Impact__c</fullName>
        <description>Created this field to track whether requirement / components will have any impact on cross projects</description>
        <inlineHelpText>Select option as Yes if components added in inventory will have impact on other projects / teams</inlineHelpText>
        <label>Cross Project Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track components related to Defect fixes</description>
        <label>Defect Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Storing description about  New Application Inventory</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for design phase1</description>
        <label>Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for design phase2</description>
        <label>Design_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Complete__c</fullName>
        <description>Storing  percenatge completion of design phase</description>
        <label>Design % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Storing name of a user who is doing design</description>
        <label>Design Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories</relationshipLabel>
        <relationshipName>Application_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostDeployment_Steps__c</fullName>
        <description>Created to capture deployment details for each requirement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PostDeployment Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreDeployment_Steps__c</fullName>
        <description>Created to capture deployment details for each requirement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PreDeployment Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <description>Request for which application inventory has been created</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Application Inventory</relationshipLabel>
        <relationshipName>Application_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SIT_Complete__c</fullName>
        <description>Storing  percenatge completion of SIT phase</description>
        <label>SIT % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SIT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Storing name of a user who is doing SIT</description>
        <label>SIT Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (SIT Owner)</relationshipLabel>
        <relationshipName>Application_Inventories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Storing the phase for New Application Inventory</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for Test phase1</description>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for Test phase2</description>
        <label>Test_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Build__c</fullName>
        <description>Total time required in build phase</description>
        <formula>Build_1__c  +  Build_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Design__c</fullName>
        <description>Total time required in design phase</description>
        <formula>Design_1__c + Design_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test__c</fullName>
        <description>Total time required in Test phase</description>
        <formula>Test_1__c + Test_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <description>Type of work in phase1</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow or Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration (Real-Time)</fullName>
                </value>
                <value>
                    <fullName>Integration (Batch)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <description>Type of work in phase2</description>
        <label>Type_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow or Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration (Real-Time)</fullName>
                </value>
                <value>
                    <fullName>Integration (Batch)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Inventory</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Application Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cross_Project_Status_field_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Cross_Project_Impact__c,&quot;Yes&quot;), ISBLANK(TEXT(Cross_Project_Impact_Status__c)))</errorConditionFormula>
        <errorMessage>Please select value of field Cross Project Impact Status when there is impact on cross project teams</errorMessage>
    </validationRules>
</CustomObject>