src/objects/Application_Inventory__c/validationRules/Cross_Project_Status_field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cross_Project_Status_field_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Cross_Project_Impact__c,&quot;Yes&quot;), ISBLANK(TEXT(Cross_Project_Impact_Status__c)))</errorConditionFormula>
    <errorMessage>Please select value of field Cross Project Impact Status when there is impact on cross project teams</errorMessage>
</ValidationRule>